--- a/5. ejercicio-css-2/styles.css
+++ b/5. ejercicio-css-2/styles.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #f0eff4;
+  background-color: #ffffff;
 }
 ::placeholder {
   font-style: italic;
@@ -38,15 +38,18 @@ form {
 fieldset {
   /*float: left;
   width: 60%;*/
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   margin-bottom: 1rem;
   padding: 1rem;
   font-size: 0.8em;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #d2d2d2;
+  border: 1px solid #d2d2d2;
+  border-bottom-width: 5px;
+  border-bottom-color: black;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+fieldset:hover {
+  background-color: #dbdbdb;
 }
 label {
   margin-bottom: 0.2rem;
@@ -66,6 +69,11 @@ button {
   cursor: pointer;
   color: #f2f2f2;
   font-size: 1em;
-  border: 1px solid #bababa;
-  background-color: #a5a5a5;
+  border: none;
+  background-color: black;
+}
+
+:required {
+  border-style: solid;
+  border-color: red;
 }
